Exercise_1/Task_2
#1. Write a program in Python to perform the following operation:
If a number is divisible by 3 it should print “Consultadd” as a string
If a number is divisible by 5 it should print “c” as a string
If a number is divisible by both 3 and 5 it should print “Consultadd Python Training” as a string.

n= int(input("Enter a number: "))
if (n % 3 == 0) and (n % 5 == 0):
    print("Consultadd Python Training")
elif n%3==0:
    print("Consultadd")
elif n%5==0:
    print("c")
else:
    pass
    
#2. Write a program in Python to perform the following operator based task:
● Ask user to choose the following option first:
○ If User Enter 1 - Addition
○ If User Enter 2 - Subtraction
○ If User Enter 3 - Division
○ If USer Enter 4 - Multiplication
○ If User Enter 5 - Average

Ask user to enter two numbers and keep those numbers in variables num1 and num2 respectively for the first 
4 options mentioned above.
● Ask the user to enter two more numbers as first and second for calculating the average as soon as the user 
chooses an option 5.
● At the end if the answer of any operation is Negative print a statement saying “NEGATIVE”
● NOTE: At a time a user can only perform one action.
"""    

#4. Write a program in Python to break and continue if the following cases occurs:
● If user enters a negative number just break the loop and print “It’s Over”
● If user enters a positive number just continue in the loop and print “Good Going”"""
n= int(input("Enter a number"))
if (n<0):
    print("It's over")
    break
elif (n>0):
     print("Good going")
     continue
else:
    pass
    
#5.Write a program in Python which will find all such numbers which are divisible by 7 but are not a multiple of 5, between 2000 and 3200.
upper=3200
lower=2000
for x in range(lower,upper+1):
    if (x%7==0) and (x%5!=0):
        print(x)    
        
#6.What is the output of the following code examples?

(a)x = 123
   for i in x:
    print(i)
Output:TypeError: 'int' object is not iterable

(b)i = 0
   while i < 5:
    print(i)
    i += 1
    if i == 3:
        break
else:
    print(“error”)

Output:print(“error”)
                ^
SyntaxError: invalid character in identifier 

(c)count = 0
   while True:
    print(count)
    count += 1
    if count >= 5:
        Break
 output:0
1
2
3
4
    Break
NameError: name 'Break' is not defined   

#7.Write a program that prints all the numbers from 0 to 6 except 3 and 6.
#Expected output: 0 1 2 4 5
#Note: Use ‘continue’ statement'''
for x in range(0,7):
    if (x==3) or (x==6):
        continue
    else:
        print(x)







